src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Process for Pardot</fullName>
        <description>Like-for-like migration as per Olam Cocoa CRM instance</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not interested</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lead Process for Sales</fullName>
        <description>General Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not interested</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Already_a_Customer__c</fullName>
        <label>Already a Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Pardot</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bag_Format__c</fullName>
        <label>Bag Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bag_Format</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Processor__c</fullName>
        <label>Current Processor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OFI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Address_Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Address Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquired_Volume__c</fullName>
        <label>Enquired Volume</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Enquired_Volume</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enquiry_Type__c</fullName>
        <label>Enquiry Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Enquiry_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Volume__c</fullName>
        <label>Expected Volume</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Expected_Volume</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explanation_Reason_Not_Interested__c</fullName>
        <description>This field is mandatory if reason not interested is &apos;Other&apos;.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is mandatory if reason not interested is &apos;Other&apos;.</inlineHelpText>
        <label>Explanation Reason Not Interested</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Herd_Size__c</fullName>
        <label>Herd Size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indirect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indirect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Employees__c</fullName>
        <label>No. of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>No_of_Employees</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pardot_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pardot_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pardot Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pardot_Region__c</fullName>
        <label>Pardot Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pardot_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cocoa Powder</fullName>
                </value>
                <value>
                    <fullName>Cocoa Butter</fullName>
                </value>
                <value>
                    <fullName>Cocoa Mass</fullName>
                </value>
                <value>
                    <fullName>Cocoa Nibs</fullName>
                </value>
                <value>
                    <fullName>Cocoa Beans</fullName>
                </value>
                <value>
                    <fullName>Cocoa Liquor</fullName>
                </value>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Not_Interested__c</fullName>
        <label>Reason Not Interested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insufficient volume</fullName>
                </value>
                <value>
                    <fullName>Not involved in cocoa/chocolate</fullName>
                </value>
                <value>
                    <fullName>Mismatch on product requirements</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_kgMS__c</fullName>
        <label>Total kgMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Lead__c</fullName>
        <label>Type of Lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Co-packer</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Co-manufacturer</fullName>
                </value>
                <value>
                    <fullName>Packaging supplier</fullName>
                </value>
                <value>
                    <fullName>Raw material supplier</fullName>
                </value>
                <value>
                    <fullName>Service provider</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is no longer used.</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Leads_allusers</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Bag_Format__c</columns>
        <columns>Enquired_Volume__c</columns>
        <columns>Enquiry_Type__c</columns>
        <columns>Product__c</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>Cocoa_Community</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Cocoa Community Leads</label>
    </listViews>
    <listViews>
        <fullName>Cocoa_Leads_APAC</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Southern Asia,Central Asia,East Asia,South East Asia,Australia and New Zealand</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>CLeong</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>RWong</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>GLow</value>
        </filters>
        <label>Cocoa Leads APAC</label>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>OCPro_Small_Pack_Team</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Region__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bag_Format__c</field>
            <operation>equals</operation>
            <value>Small bags (1 - 5 kilos)</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>Small Packs Team</value>
        </filters>
        <label>OCPro Small Pack Team</label>
        <sharedTo>
            <role>Cocoa_Global_OCPRO_Head</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Order_Enquiry_APAC_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Order Enquiry: APAC</label>
        <queue>Order_Enquiry_APAC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Order_Enquiry_EMEA_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Order Enquiry: EMEA</label>
        <queue>Order_Enquiry_EMEA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Order_Enquiry_North_Central_America_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Order Enquiry: North, Central America</label>
        <queue>Order_Enquiry_North_Central_America</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Order_Enquiry_South_America_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Order Enquiry: South America</label>
        <queue>Order_Enquiry_South_America</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Product_Beans_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Product: Beans</label>
        <queue>Product_Beans</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Product_Enquiry_AMEA_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Tech / Product Enquiry AMEA</label>
        <queue>Tech_Product_Enquiry_AMEA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Product_Enquiry_APAC_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Tech / Product Enquiry: APAC</label>
        <queue>Tech_Product_Enquiry_APAC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Product_Enquiry_EMEA_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Tech / Product Enquiry: EMEA</label>
        <queue>Tech_Product_Enquiry_EMEA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Small_Packs_Team_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Small Packs Team</label>
        <queue>Small_Packs_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Dairy_Farmer</fullName>
        <active>true</active>
        <businessProcess>Lead Process for Pardot</businessProcess>
        <description>Customer generation for the Dairy Business Unit</description>
        <label>Dairy Farmer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_for_OCPro</fullName>
        <active>true</active>
        <businessProcess>Lead Process for Pardot</businessProcess>
        <label>Lead</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Explanation_reason_not_interested</fullName>
        <active>true</active>
        <description>This field is mandatory if reason not interested is &apos;Other&apos;.</description>
        <errorConditionFormula>OR(

And(
ISPICKVAL ( Reason_Not_Interested__c , &quot;Other&quot;) ,
ISBLANK ( Explanation_Reason_Not_Interested__c)
)
)</errorConditionFormula>
        <errorDisplayField>Explanation_Reason_Not_Interested__c</errorDisplayField>
        <errorMessage>This field is mandatory if reason not interested is &apos;Other&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_Not_Interested</fullName>
        <active>true</active>
        <description>This field is mandatory if status is &apos;Not Interested&apos;.</description>
        <errorConditionFormula>OR (

AND(
ISPICKVAL (Status, &quot;Not Interested&quot;) ,
ISPICKVAL (Reason_Not_Interested__c , &quot;&quot;)
),

AND(
NOT (ISPICKVAL(Status, &quot;Not Interested&quot;)) ,
NOT (ISPICKVAL(Reason_Not_Interested__c, &quot;&quot; ) )
)
)</errorConditionFormula>
        <errorDisplayField>Reason_Not_Interested__c</errorDisplayField>
        <errorMessage>This field is mandatory if status is &apos;Not Interested&apos;.</errorMessage>
    </validationRules>
</CustomObject>